<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_id"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical"
        
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imageViewDescription"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="right"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#1f759d"
            android:textSize="19sp"
            android:gravity="right"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textViewStatictiscBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="2dp"
            android:background="#bf0048"
            android:paddingBottom="2dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp"
            android:gravity="right"
            android:text="@string/statictist"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewWorldCupStatictist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="right"
            android:background="#f5ecf0"
            android:lineSpacingExtra="8dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewRecordsBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="2dp"
            android:background="#005896"
            android:paddingBottom="2dp"
            android:paddingLeft="15dp"
            android:gravity="right"
            android:paddingRight="15dp"
            android:paddingTop="2dp"
            android:text="@string/records"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewWorldCupRecords"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="right"
            android:background="#e8f0f5"
            android:lineSpacingExtra="8dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewDescriptionBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="2dp"
            android:background="#ff4e00"
            android:paddingBottom="2dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp"
            android:gravity="right"
            android:text="@string/description"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewWorldCupDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:gravity="right"
            android:padding="10dp"
            android:lineSpacingExtra="8dp"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>